--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
     <string name="frag_cool">Cooler Fragment</string>
     <string name="frag_cloud">Cloud Fragment</string>
     <string name="frag_gps">GPS Fragment</string>
+    <string name="default_temp">20</string>
+    <string name="temp_unit">&#176;C</string>
+    <string name="toast_button_text">Update System</string>
+    <string name="toast_output">System Updated!</string>
+    <string name="random_button_text">Random</string>
+    <string name="count_button_text">Count</string>
+    <string name="temp_up_button">Temp Up</string>
+    <string name="temp_down_button">Temp Down</string>
 </resources>
