commit 4 Starting GPS Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="snav_gps">GPS</string>
     <string name="snav_share">Share</string>
     <string name="snav_help">Help</string>
-    <string name="snav_text">Welcome to the Cooler Transport App</string>
+    <string name="snav_text">Medical Transport Cooler App</string>
     <string name="snav_credit">Design by Taylor Ngo</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
