commit 5 Starting GPS Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="temp_up_button">Temp Up</string>
     <string name="temp_down_button">Temp Down</string>
     <string name="nav_image_text">Android App Image</string>
+
+    <string name="user_manual">Howdy, welcome to the </string>
 </resources>
