commit GPS updated need to implement services

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="tracker">Tracker</string>
     <string name="start">start</string>
     <string name="end">end</string>
+    <string name="ask_perm">Ask Permissions</string>
 </resources>
